--- a/index.html
+++ b/index.html
@@ -85,6 +85,6 @@
         window.setTimeout(run, 100);
     }
     run();
-    alert("Hello World!");
+    setTimeout(function(){alert("Hello World!");},5000);
 </script>
 </html>
